--- a/examples/ex-cxx-basic/CMakeLists.txt
+++ b/examples/ex-cxx-basic/CMakeLists.txt
@@ -10,6 +10,6 @@ if(USE_CALIPER)
 endif()
 
 find_package(timemory REQUIRED COMPONENTS ${COMPONENTS})
-add_executable(test_cxx_basic test_cxx_basic.cpp)
-target_link_libraries(test_cxx_basic timemory-cxx-basic-example)
-install(TARGETS test_cxx_basic DESTINATION bin)
+add_executable(ex_cxx_basic ex_cxx_basic.cpp)
+target_link_libraries(ex_cxx_basic timemory-cxx-basic-example)
+install(TARGETS ex_cxx_basic DESTINATION bin)
