--- a/examples/ex-cxx-tuple/CMakeLists.txt
+++ b/examples/ex-cxx-tuple/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 
 project(timemory-CXX-Tuple-Example LANGUAGES C CXX)
 
-set(EXE_NAME test_cxx_tuple)
+set(EXE_NAME ex_cxx_tuple)
 set(COMPONENTS compile-options papi threading analysis-tools extern-templates)
 
 option(USE_MPI "Enable MPI" ON)
