Options + re-organization + simplified units
- TIMEMORY_BUILD_DEVELOPER option
- TIMEMORY_BUILD_DOCS option
- timemory-threading
- reduced compile time
  - no include unused components
- re-organized source tree
- fixed hybrid_tests
- removed tim::settings::process<Types...>()
- simplified precision/units/format/etc.
- introduced cleanup/invoke_cleanup static functions in component::base
- fixed get_secondary() usage
- made component_type alias consistent
- fixes to papi_tuple
- improved multiplexing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,12 +140,12 @@ unset(_TLS_OPTIONS)
 #   rest of configuration
 #----------------------------------------------------------------------------------------#
 
+include(ClangFormat)
 include(Compilers)
 include(GNUInstallDirs)
 include(ProjectSettings)
 include(BuildSettings)
 include(Packages)
-include(ClangFormat)
 include(CMakeParseArguments)
 
 #----------------------------------------------------------------------------------------#
@@ -196,7 +196,7 @@ if("${CMAKE_PROJECT_NAME}" STREQUAL "${PROJECT_NAME}")
 
     include(Documentation)
 
-    if(TIMEMORY_DOXYGEN_DOCS)
+    if(TIMEMORY_BUILD_DOCS)
         SET(CMAKE_INSTALL_MESSAGE NEVER)
         Generate_Documentation(Doxyfile.${PROJECT_NAME})
         SET(CMAKE_INSTALL_MESSAGE LAZY)
