--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -37,45 +37,45 @@ add_subdirectory(external)
 add_timemory_google_test(mangle_tests
     DISCOVER_TESTS
     SOURCES         mangle_tests.cpp
-    LINK_LIBRARIES  timemory-headers timemory-compile-options)
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options)
 
 add_timemory_google_test(macro_tests
     DISCOVER_TESTS
     SOURCES         macro_tests.cpp
-    LINK_LIBRARIES  timemory-headers timemory-compile-options)
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options)
 
 add_timemory_google_test(hybrid_tests
     DISCOVER_TESTS
     SOURCES         hybrid_tests.cpp
-    LINK_LIBRARIES  timemory-headers timemory-compile-options ${HYBRID_COMPONENTS})
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options ${HYBRID_COMPONENTS})
 
 add_timemory_google_test(timing_tests
     DISCOVER_TESTS
     SOURCES         timing_tests.cpp
-    LINK_LIBRARIES  timemory-headers timemory-compile-options)
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options)
 
 add_timemory_google_test(rusage_tests
     DISCOVER_TESTS
     SOURCES         rusage_tests.cpp
-    LINK_LIBRARIES  timemory-headers timemory-compile-options)
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options)
 
 if(TIMEMORY_USE_PAPI)
     add_timemory_google_test(papi_tests
         DISCOVER_TESTS
         SOURCES         papi_tests.cpp
-        LINK_LIBRARIES  timemory-headers timemory-papi timemory-compile-options)
+        LINK_LIBRARIES  timemory-headers timemory-papi timemory-compile-options timemory-develop-options)
 endif()
 
 add_timemory_google_test(apply_tests
     DISCOVER_TESTS
     SOURCES         apply_tests.cpp
-    LINK_LIBRARIES  timemory-headers timemory-compile-options)
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options)
 
 if(TIMEMORY_USE_ARCH)
     add_timemory_google_test(aligned_allocator_tests
         DISCOVER_TESTS
         SOURCES         aligned_allocator_tests.cpp
-        LINK_LIBRARIES  timemory-headers timemory-arch timemory-compile-options)
+        LINK_LIBRARIES  timemory-headers timemory-arch timemory-compile-options timemory-develop-options)
 endif()
 
 set_source_files_properties(cuda_tests.cpp cupti_tests.cpp
@@ -88,14 +88,14 @@ if(TIMEMORY_USE_CUDA)
         DISCOVER_TESTS
         SOURCES         cuda_tests.cpp
         LINK_LIBRARIES  timemory-headers timemory-arch   timemory-compile-options
-                        timemory-cuda    timemory-cudart)
+                        timemory-cuda    timemory-cudart timemory-develop-options)
 endif()
 
 if(TIMEMORY_USE_CUDA AND TIMEMORY_USE_NVTX)
     add_timemory_google_test(cuda_nvtx_tests
         DISCOVER_TESTS
         SOURCES         cuda_tests.cpp
-        LINK_LIBRARIES  timemory-headers timemory-arch   timemory-compile-options
+        LINK_LIBRARIES  timemory-headers timemory-arch   timemory-compile-options timemory-develop-options
                         timemory-cuda    timemory-cudart timemory-nvtx)
 endif()
 
@@ -106,7 +106,7 @@ if(TIMEMORY_USE_CUPTI AND HAS_CUDA_cuda_LIBRARY)
     add_timemory_google_test(cupti_tests
         DISCOVER_TESTS
         SOURCES         cupti_tests.cpp
-        LINK_LIBRARIES  timemory-headers timemory-arch   timemory-compile-options
+        LINK_LIBRARIES  timemory-headers timemory-arch   timemory-compile-options timemory-develop-options
                         timemory-cuda    timemory-cupti  # timemory-cudart-device
                         cupti-compile-options)
 endif()
@@ -114,7 +114,7 @@ endif()
 if(_HAS_PROFILER)
     add_timemory_google_test(gperf_cpu_tests
         SOURCES         gperf_cpu_tests.cpp
-        LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-gperftools-cpu
+        LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options timemory-gperftools-cpu
         ENVIRONMENT     "CPUPROFILE_FREQUENCY=1000;CPUPROFILE_REALTIME=1")
 endif()
 
@@ -127,7 +127,7 @@ if(_HAS_TCMALLOC)
     add_timemory_google_test(gperf_heap_tests
         DISCOVER_TESTS
         SOURCES         gperf_heap_tests.cpp
-        LINK_LIBRARIES  timemory-headers    timemory-arch   timemory-compile-options
+        LINK_LIBRARIES  timemory-headers    timemory-arch   timemory-compile-options timemory-develop-options
                         timemory-gperftools-heap)
 endif()
 
@@ -135,7 +135,7 @@ if(TIMEMORY_USE_GOTCHA)
     add_timemory_google_test(gotcha_tests
         DISCOVER_TESTS
         SOURCES         gotcha_tests.cpp
-        LINK_LIBRARIES  timemory-headers    timemory-compile-options
+        LINK_LIBRARIES  timemory-headers    timemory-compile-options timemory-develop-options
                         timemory-gotcha     timemory-mpi
                         timemory-papi       timemory-vector
                         timemory-arch       gotcha-tests-lib)
@@ -144,4 +144,4 @@ endif()
 add_timemory_google_test(priority_tests
     DISCOVER_TESTS
     SOURCES         priority_tests.cpp
-    LINK_LIBRARIES  timemory-headers)
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options)
