--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -19,7 +19,9 @@ add_option(TIMEMORY_BUILD_TIMEM "Build the timem tool" ON)
 add_option(TIMEMORY_BUILD_MPIP "Build the mpiP library" ON)
 
 # pmpi tool
-add_subdirectory(mpip)
+if(TARGET timemory-cxx-shared AND TIMEMORY_USE_GOTCHA)
+    add_subdirectory(mpip)
+endif()
 
 if(NOT TIMEMORY_BUILD_TIMEM)
     return()
