--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -93,8 +93,8 @@ build_script:
     -DTIMEMORY_BUILD_GTEST=OFF
     .. -G "%CMAKE_GENERATOR%" -A "%CMAKE_ARCH%"
   - set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-  - cmake --build . --config "%CONFIG%" --target ALL_BUILD -- /MP /m /v:m /logger:%MSBuildLogger%
-  - cmake --build . --config "%CONFIG%" --target INSTALL -- /MP /m /v:m /logger:%MSBuildLogger%
+  - cmake --build . --config "%CONFIG%" --target ALL_BUILD -- /m /v:m /logger:%MSBuildLogger%
+  - cmake --build . --config "%CONFIG%" --target INSTALL -- /m /v:m /logger:%MSBuildLogger%
   - ls
   - .\outputs\runtime\%CONFIG%\ex_cxx_basic.exe
   - .\outputs\runtime\%CONFIG%\ex_optional_on.exe
