Minor fixes to papi_array + fp16_t fixes

--- a/examples/ex-gpu-roofline/CMakeLists.txt
+++ b/examples/ex-gpu-roofline/CMakeLists.txt
@@ -37,9 +37,11 @@ target_link_libraries(gpu-fp-single INTERFACE gpu-roofline-compile-options)
 target_link_libraries(gpu-fp-double INTERFACE gpu-roofline-compile-options)
 
 # using half-precision
-add_executable(ex-gpu-roofline-half            ${EXE_NAME}.cpp)
-target_link_libraries(ex-gpu-roofline-half     timemory-gpu-roofline-example gpu-fp-half)
-set_target_properties(ex-gpu-roofline-half     PROPERTIES OUTPUT_NAME ${EXE_NAME}.hp)
+if(NOT DEFINED TIMEMORY_DISABLE_CUDA_HALF2 OR NOT TIMEMORY_DISABLE_CUDA_HALF2)
+    add_executable(ex-gpu-roofline-half            ${EXE_NAME}.cpp)
+    target_link_libraries(ex-gpu-roofline-half     timemory-gpu-roofline-example gpu-fp-half)
+    set_target_properties(ex-gpu-roofline-half     PROPERTIES OUTPUT_NAME ${EXE_NAME}.hp)
+endif()
 
 # using single-precision
 add_executable(ex-gpu-roofline-single          ${EXE_NAME}.cpp)
@@ -59,8 +61,11 @@ set_target_properties(ex-gpu-roofline          PROPERTIES OUTPUT_NAME ${EXE_NAME
 install(
     TARGETS
         ex-gpu-roofline
-        ex-gpu-roofline-half
         ex-gpu-roofline-single
         ex-gpu-roofline-double
     DESTINATION
         bin)
+
+if(TARGET ex-gpu-roofline-half)
+    install(TARGETS ex-gpu-roofline-half DESTINATION bin)
+endif()
