--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -97,7 +97,7 @@ build_script:
   - cmake --build . --config "%CONFIG%" --target INSTALL -- /m /v:m /logger:%MSBuildLogger%
   - ls
   - .\outputs\runtime\%CONFIG%\ex_cxx_basic.exe
-  - .\outputs\runtime\%CONFIG%\ex_optional_on.exe
-  - .\outputs\runtime\%CONFIG%\ex_optional_off.exe
+  #- .\outputs\runtime\%CONFIG%\ex_optional_on.exe
+  #- .\outputs\runtime\%CONFIG%\ex_optional_off.exe
   - .\outputs\runtime\%CONFIG%\ex_cxx_overhead.exe
   - .\outputs\runtime\%CONFIG%\ex_cxx_tuple.exe
