--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,8 +1,9 @@
 python:
-    - 2.7
-    - 3.5
     - 3.6
     - 3.7
 mpi:
     - openmpi
     - mpich
+cuda:
+    - cudatoolkit
+    - cudatoolkit-dev
