--- a/.travis.yml
+++ b/.travis.yml
@@ -168,7 +168,7 @@ matrix:
             - lcov
             - graphviz
       env:
-        - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7) && BUILD_TYPE=Debug && BUILD_ARGS='--build-libs shared'"
+        - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7) && BUILD_TYPE=Release && BUILD_ARGS='--build-libs shared'"
     #
     # GCC 8
     - os: linux
